--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/layui.css">
     <link rel="stylesheet" href="assets/css/login.css">
 	<link rel="stylesheet" href="assets/css/new.css">
@@ -34,6 +35,8 @@
     </div>
 </body>
 <script src="js/jquery-1.12.4.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript" src="js/bootstrap.min.js" ></script>
+<script type="text/javascript" src="js/dialog.js" ></script>
 <script src="assets/layui.js"></script>
 <script src="js/login.js"></script>
 <script>
@@ -47,13 +50,11 @@
 				dataType:"json",
 				success:function(data){
 					if(data["code"] == 200){
-						alert("登录成功");
 						location.href="index.html";
 					}else if(data["code"]==300){
-						alert("用户名或者密码错误!!!");
+						showAlertDialog("用户名或者密码错误!!!");
 						return;
 					}
-					
 				}
 			});
 		});
