--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							</a>
 							<dl class="layui-nav-child">
 								<dd><a href="javascript:void(0)">系统日志</a></dd>
-								<dd><a href="javascript:void(0)">角色附加</a></dd>
+								<dd><a href="views/juesefujia.html">角色附加</a></dd>
 								<dd><a href="javascript:void(0)">权限附加</a></dd>
 								<dd><a href="javascript:void(0)">基础数据</a></dd>
 								<dd><a href="javascript:void(0)">数据统计</a></dd>
@@ -134,5 +134,10 @@
 		<script src="assets/layui.js"></script>
 		<script src="js/index.js"></script>
 		<script src="js/home.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript">
+			$(function(){
+				
+			});
+		</script>
 	</body>
 </html>
