--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
         $('.login-out').on("click", function () {
             layer.msg('退出登录成功', function () {
-                window.location = 'page/login.html';
+                window.location = 'login.html';
             });
         });
     });
