2021010611:01加了模态框

--- a/index.html
+++ b/index.html
@@ -132,6 +132,6 @@
 		</div>
 		<script src="assets/layui.js"></script>
 		<script src="js/index.js"></script>
-		<script src="js/home.js" type="text/javascript" charset="utf-8"></script>
+		<script src="home.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
