--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 								<em>职工管理</em>
 							</a>
 							<dl class="layui-nav-child">
-								<dd><a href="javascript:void(0)">职工列表</a></dd>
+								<dd><a href="employeesList.html">职工列表</a></dd>
 								<dd><a href="javascript:void(0)">离职登记</a></dd>
 								<dd><a href="javascript:void(0)">通讯目录</a></dd>
 								<dd><a href="javascript:void(0)">岗位定义</a></dd>
