--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
 				dataType:"json",
 				success:function(data){
 					if(data["code"] == 200){
-						location.href="index.html";
+						location.href="zhuye.html";
 					}else if(data["code"]==300){
 						showAlertDialog("用户名或者密码错误!!!");
 						return;
