--- a/login.html
+++ b/login.html
@@ -1,64 +1,78 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/layui.css">
-    <link rel="stylesheet" href="assets/css/login.css">
-	<link rel="stylesheet" href="assets/css/new.css">
-    <link rel="icon" href="/favicon.ico">
-    <title>管理后台</title>
-</head>
-<body class="login-wrap">
-    <div class="login-container">
-        <form class="login-form">
-			<div class="login_img">
-				<img src="./img/logo.png" style="margin-bottom: 100px;">
-				<h3 class="title">汽修管理系统-登录</h3>
+
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" href="assets/css/layui.css">
+		<link rel="stylesheet" href="assets/css/login.css">
+		<link rel="stylesheet" href="assets/css/new.css">
+		<link rel="icon" href="/favicon.ico">
+		<title>管理后台</title>
+	</head>
+
+	<body class="login-wrap">
+		<div class="login-container">
+			<form class="login-form">
+				<div class="login_img">
+					<img src="./img/logo.png" style="margin-bottom: 100px;">
+					<h3 class="title">汽修管理系统-登录</h3>
 				</div>
-            <div class="input-group">
-                <input type="text" id="username" class="input-field" style="color: white;">
-                <label for="username" class="input-label">
+				<div class="input-group">
+					<input type="text" id="username" class="input-field" style="color: white;">
+					<label for="username" class="input-label">
                     <span class="label-title" style="color: white;">用户名</span>
                 </label>
-            </div>
-            <div class="input-group">
-                <input type="password" id="password" class="input-field" style="color: white;">
-                <label for="password" class="input-label">
+				</div>
+				<div class="input-group">
+					<input type="password" id="password" class="input-field" style="color: white;">
+					<label for="password" class="input-label">
                     <span class="label-title" style="color: white;">密码</span>
                 </label>
-            </div>
-            <button type="button" class="login-button">登录<i class="ai ai-enter"></i></button>
-        </form>
-    </div>
-</body>
-<script src="js/jquery-1.12.4.js" type="text/javascript" charset="utf-8"></script>
-<script type="text/javascript" src="js/bootstrap.min.js" ></script>
-<script type="text/javascript" src="js/dialog.js" ></script>
-<script src="assets/layui.js"></script>
-<script src="js/login.js"></script>
-<script>
-	$(function(){
-		$(".login-button").click(function(){
-			var userName = $("#username").val();
-			var userPwd = $("#password").val();
-			$.ajax({
-				url:"http://127.0.0.1:8080/dzw_sys/api/employees/"+userName+"/"+userPwd,
-				type:"get",
-				dataType:"json",
-				success:function(data){
-					if(data["code"] == 200){
-						location.href="index.html";
-					}else if(data["code"]==300){
-						showAlertDialog("用户名或者密码错误!!!");
-						return;
-					}
+				</div>
+				<button type="button" class="login-button">登录<i class="ai ai-enter"></i></button>
+			</form>
+		</div>
+	</body>
+	<script src="js/jquery-1.12.4.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/dialog.js"></script>
+	<script src="assets/layui.js"></script>
+	<script src="js/login.js"></script>
+	<script>
+		$(function() {
+			$(".login-button").click(function() {
+				var eaccount = $("#username").val();
+				var epwd = $("#password").val();
+				if(eaccount=="" || eaccount==null){
+					showAlertDialog("账号不能为空...");
+					return;
 				}
+				if(epwd=="" || epwd==null){
+					showAlertDialog("密码不能为空...");
+					return;
+				}
+				$.ajax({
+					url: "http://127.0.0.1:8080/dzw_sys/api/logins/login/"+eaccount+"/"+epwd,
+					type: "get",
+					dataType: "json",
+					success: function(data) {
+						console.log(data);
+						if(data["code"] == "200") {
+							location.href = 'index.html';
+							//存入本地缓存
+							window.sessionStorage.setItem("userName",JSON.stringify(data.EMP.ename));
+						} else {
+							showAlertDialog('用户名或密码错误或该员工已离职!');
+							return;
+						}
+					}
+				});
 			});
-		});
-		
-	})
-</script>
+
+		})
+	</script>
+
 </html>
